--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="main">
-        <div class="footer"></div>
-        <div class="numbers"></div>
-      </div>
       <div class="actions">
         <button class="C">C</button>
         <button class="=">=</button>
         <button class="+">+</button>
         <button class="-">-</button>
         <button class="/">/</button>
-        <button class="x">x</button>
+        <button class="*">*</button>
       </div>
+      <div class="main">
+        <div class="footer"></div>
+        <div class="numbers"></div>
+      </div>
+      
     </div>
 
     <script src="script.js"></script>
