result of evaluation

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <button class="*">*</button>
       </div>
       <div class="main">
-        <div class="footer"></div>
+        <div class="footer"> 
+          <div class="result">0</div>
+          <div class="expression"></div>
+        </div>
         <div class="numbers"></div>
       </div>
-      
     </div>
 
     <script src="script.js"></script>
