rewrite whole code // add the comments

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="calculator">
       <div class="actions">
-        <button class="C">C</button>
-        <button class="=">=</button>
+        <button class="C">AC</button>
+        <button class="equals">=</button>
         <button class="+">+</button>
         <button class="-">-</button>
         <button class="/">/</button>
